--- a/site/estilo.css
+++ b/site/estilo.css
@@ -1,20 +1,24 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
-    
+
 }
 
 body{
-    background-color: rgb(133, 19, 233);
+    background-color: rgba(192, 160, 228, 0.655);
 
 }
 
 main{
-    background-color: rgb(255, 255, 255);
+    background-color: #f8f8f8;
     width: 1000px;
     margin: auto;
-    padding: 200px;
-    box-shadow: 10px 15px 50px rgb(0, 0, 0);
-    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    border-radius: 0px;
 
 }
+img {
+    margin: auto;
+    display: block;
+  }
