--- a/site/estilo.css
+++ b/site/estilo.css
@@ -22,3 +22,41 @@ img {
     margin: auto;
     display: block;
   }
+body{
+
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(#79e4a6), #1bc296;
+}
+.search-box{
+        
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background:  rgba(192, 160, 228, 0.655);;
+    height: 40px;
+    padding: 10px   ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+
+}
+.search-txt{
+    border: none;
+    background-color:  rgba(192, 160, 228, 0.655);
+    outline: none;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    line-height: 40px;
+    width: 50;
+}
+.search-btn{
+width: 40px;
+height: 40px;
+border-radius: 50%;
+
+}
