--- a/site/estilo.css
+++ b/site/estilo.css
@@ -76,7 +76,7 @@ body{
         
     position: absolute;
     top: 5.90%;
-    left: 32%;
+    left: 50%;
     transform: translate(-50%, -50%);
     background:  rgba(234, 232, 236, 0);;
     height: 40px;
@@ -109,7 +109,38 @@ border-radius: 100%;
     background-color: #fff;
     margin: 6px;
 }
-.mobile menu{
+.mobile-menu{
     cursor: pointer;
+    display: none;
+}
+@media (max-width: 999px) {
+    body{
+        overflow: hidden;
+    }
+    .nav-list{
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        background: #23232e;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: 3.0s ease-in;
+    }
 
+}
+
+
+
+.mobile-menu {
+
+    display: block;
+    
+}
+.nav-list.active {
+
+    transform: translateX(0);
 }
