--- a/site/estilo.css
+++ b/site/estilo.css
@@ -155,3 +155,8 @@ border-radius: 100%;
 
     transform: translateX(0);
 }
+button {
+    border: none;
+    background-color: transparent;
+  }
+  
